--- a/index.html
+++ b/index.html
@@ -7,5 +7,8 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
+    <p><a href="./recipes/banana-bread.html">Banana Bread</a></p>
+    <p><a href="./recipes/pancakes.html">Good Old Fashioned Pancakes</a></p>
+    <p><a href="./recipes/chocolate-chip-cookies.html">Chocolate Chip Cookies</a></body></p>
 </body>
 </html>
