--- a/recipes/banana-bread.html
+++ b/recipes/banana-bread.html
@@ -7,5 +7,25 @@
 </head>
 <body>
     <h1>Banana Bread</h1>
+    <img src="../images/banana-bread.jpeg" alt="Banana bread picture" width="500">
+    <h3>Description</h3>
+    <p>This banana bread recipe creates the most delicious, moist loaf with loads of banana flavor. Why compromise the banana flavor? Friends and family love my recipe and say it's by far the best! It tastes wonderful toasted. Enjoy!</p>
+    <p>Our most popular banana bread is moist, delicious, and absolutely packed with banana flavor. This Allrecipes community favorite will quickly become your go-to banana bread recipe!</p>
+    <h3>Ingredients</h3>
+    <ul>
+        <li>2 cups all-purpose flour</li>
+        <li>1 teaspoon baking soda</li>
+        <li>¼ teaspoon salt</li>
+        <li>¾ cup brown sugar</li>
+        <li>½ cup butter</li>
+        <li>2 large eggs, beaten</li>
+        <li>2 ⅓ cups mashed overripe bananas</li>
+    </ul>
+    <h3>Directions</h3>
+    <ol>
+        <li>Preheat the oven to 350 degrees F (175 degrees C). Lightly grease a 9x5-inch loaf pan.</li>
+        <li>Combine flour, baking soda, and salt in a large bowl. Beat brown sugar and butter with an electric mixer in a separate large bowl until smooth. Stir in eggs and mashed bananas until well blended. Stir banana mixture into flour mixture until just combined. Pour batter into the prepared loaf pan.</li>
+        <li>Bake in the preheated oven until a toothpick inserted into the center comes out clean, about 60 minutes. Let bread cool in pan for 10 minutes, then turn out onto a wire rack to cool completely.</li>
+    </ol>
 </body>
 </html>
