--- a/recipes/chocolate-chip-cookies.html
+++ b/recipes/chocolate-chip-cookies.html
@@ -7,5 +7,35 @@
 </head>
 <body>
     <h1>Chocolate Chip Cookies</h1>
+    <img src="../images/chocolate-chip-cookies.jpeg" alt="chocolate chip cookie image" width="500">
+    <h3>Description</h3>
+    <p>This chocolate chip cookie recipe makes dozens of delicious cookies with crisp edges and chewy middles loaded with chocolate chips!</p>
+    <p>This chocolate chip cookie recipe is truly the best. Just take it from the 14,000 members of the Allrecipes community who have given it rave reviews! These chocolate chip cookies are beloved because they're soft, chewy, and absolutely irresistible. Our top-rated recipe for chocolate chip cookies will quickly become your go-to.</p>
+    <h3>Ingredients</h3>
+    <ul>
+        <li>1 cup butter, softened</li>
+        <li>1 cup white sugar</li>
+        <li>1 cup packed brown sugar</li>
+        <li>2 large eggs</li>
+        <li>2 teaspoons vanilla extract</li>
+        <li>1 teaspoon baking soda</li>
+        <li>2 teaspoons hot water</li>
+        <li>½ teaspoon salt</li>
+        <li>3 cups all-purpose flour</li>
+        <li>2 cups semisweet chocolate chips</li>
+        <li>1 cup chopped walnuts</li>
+    </ul>
+    <h3>Directions</h3>
+    <ol>
+        <li>Gather your ingredients, making sure your butter is softened, and your eggs are room temperature.</li>
+        <li>Preheat the oven to 350 degrees F (175 degrees C). Beat butter, white sugar, and brown sugar with an electric mixer in a large bowl until smooth.</li>
+        <li>Beat in eggs, one at a time, then stir in vanilla.</li>
+        <li>Dissolve baking soda in hot water. Add to batter along with salt.</li>
+        <li>Stir in flour, chocolate chips, and walnuts.</li>
+        <li>Drop spoonfuls of dough 2 inches apart onto ungreased baking sheets.</li>
+        <li>Bake in the preheated oven until edges are nicely browned, about 10 minutes.</li>
+        <li>Cool on the baking sheets briefly before removing to a wire rack to cool completely.</li>
+        <li>Store in an airtight container or serve immediately and enjoy!</li>
+    </ol>
 </body>
 </html>
