--- a/recipes/pancakes.html
+++ b/recipes/pancakes.html
@@ -7,5 +7,24 @@
 </head>
 <body>
     <h1>Good Old Fashioned Pancakes</h1>
+    <img src="../images/pancakes.webp" alt="pancake image" width="500">
+    <h3>Description</h2>
+    <p>I found this pancake recipe in my Grandma's recipe book. Judging from the weathered look of this recipe card, this was a family favorite.</p>
+    <p>Perfect pancakes are easier to make than you think. This pancake recipe produces thick, fluffy, and all-around delicious pancakes with just a few ingredients that are probably already in your kitchen (and it's so much better than the boxed stuff).</p>
+    <h3>Ingredients</h3>
+    <ul>
+        <li>1 ½ cups all-purpose flour</li>
+        <li>3 ½ teaspoons baking powder</li>
+        <li>1 tablespoon white sugar</li>
+        <li>¼ teaspoon salt, or more to taste</li>
+        <li>1 ¼ cups milk</li>
+        <li>3 tablespoons butter, melted</li>
+        <li>1 egg</li>
+    </ul>
+    <h3>Directions</h3>
+    <ol>
+        <li>Sift flour, baking powder, sugar, and salt together in a large bowl. Make a well in the center and add milk, melted butter, and egg; mix until smooth.</li>
+        <li>Heat a lightly oiled griddle or pan over medium-high heat. Pour or scoop the batter onto the griddle, using approximately 1/4 cup for each pancake; cook until bubbles form and the edges are dry, about 2 to 3 minutes. Flip and cook until browned on the other side. Repeat with remaining batter.</li>
+    </ol>
 </body>
 </html>
