--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Tejas's Kitchen</title>
 </head>
 <body>
-    <h1>Odin Recipes</h1>
+    <h1>Tejas's Recipes</h1>
     <p><a href="./recipes/banana-bread.html">Banana Bread</a></p>
     <p><a href="./recipes/pancakes.html">Good Old Fashioned Pancakes</a></p>
     <p><a href="./recipes/chocolate-chip-cookies.html">Chocolate Chip Cookies</a></body></p>
