Added styles.css and generic styling

--- a/index.html
+++ b/index.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="./styles.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tejas's Kitchen</title>
 </head>
 <body>
-    <h1>Tejas's Recipes</h1>
-    <p><a href="./recipes/banana-bread.html">Banana Bread</a></p>
-    <p><a href="./recipes/pancakes.html">Good Old Fashioned Pancakes</a></p>
-    <p><a href="./recipes/chocolate-chip-cookies.html">Chocolate Chip Cookies</a></body></p>
+    <h1 class="header">Tejas's Recipes</h1>
+    <p><a class="link" href="./recipes/banana-bread.html">Banana Bread</a></p>
+    <p><a class="link" href="./recipes/pancakes.html">Good Old Fashioned Pancakes</a></p>
+    <p><a class="link" href="./recipes/chocolate-chip-cookies.html">Chocolate Chip Cookies</a></body></p>
 </body>
 </html>
