--- a/recipes/banana-bread.html
+++ b/recipes/banana-bread.html
@@ -1,17 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="../styles.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
 <body>
-    <h1>Banana Bread</h1>
+    <h1 class="header">Banana Bread</h1>
     <img src="../images/banana-bread.jpeg" alt="Banana bread picture" width="500">
-    <h3>Description</h3>
+    <h3 class="header">Description</h3>
     <p>This banana bread recipe creates the most delicious, moist loaf with loads of banana flavor. Why compromise the banana flavor? Friends and family love my recipe and say it's by far the best! It tastes wonderful toasted. Enjoy!</p>
     <p>Our most popular banana bread is moist, delicious, and absolutely packed with banana flavor. This Allrecipes community favorite will quickly become your go-to banana bread recipe!</p>
-    <h3>Ingredients</h3>
+    <h3 class="header">Ingredients</h3>
     <ul>
         <li>2 cups all-purpose flour</li>
         <li>1 teaspoon baking soda</li>
@@ -21,7 +22,7 @@
         <li>2 large eggs, beaten</li>
         <li>2 ⅓ cups mashed overripe bananas</li>
     </ul>
-    <h3>Directions</h3>
+    <h3 class="header">Directions</h3>
     <ol>
         <li>Preheat the oven to 350 degrees F (175 degrees C). Lightly grease a 9x5-inch loaf pan.</li>
         <li>Combine flour, baking soda, and salt in a large bowl. Beat brown sugar and butter with an electric mixer in a separate large bowl until smooth. Stir in eggs and mashed bananas until well blended. Stir banana mixture into flour mixture until just combined. Pour batter into the prepared loaf pan.</li>
