--- a/recipes/chocolate-chip-cookies.html
+++ b/recipes/chocolate-chip-cookies.html
@@ -1,17 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="../styles.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
 <body>
-    <h1>Chocolate Chip Cookies</h1>
+    <h1 class="header">Chocolate Chip Cookies</h1>
     <img src="../images/chocolate-chip-cookies.jpeg" alt="chocolate chip cookie image" width="500">
-    <h3>Description</h3>
+    <h3 class="header">Description</h3>
     <p>This chocolate chip cookie recipe makes dozens of delicious cookies with crisp edges and chewy middles loaded with chocolate chips!</p>
     <p>This chocolate chip cookie recipe is truly the best. Just take it from the 14,000 members of the Allrecipes community who have given it rave reviews! These chocolate chip cookies are beloved because they're soft, chewy, and absolutely irresistible. Our top-rated recipe for chocolate chip cookies will quickly become your go-to.</p>
-    <h3>Ingredients</h3>
+    <h3 class="header">Ingredients</h3>
     <ul>
         <li>1 cup butter, softened</li>
         <li>1 cup white sugar</li>
@@ -25,7 +26,7 @@
         <li>2 cups semisweet chocolate chips</li>
         <li>1 cup chopped walnuts</li>
     </ul>
-    <h3>Directions</h3>
+    <h3 class="header">Directions</h3>
     <ol>
         <li>Gather your ingredients, making sure your butter is softened, and your eggs are room temperature.</li>
         <li>Preheat the oven to 350 degrees F (175 degrees C). Beat butter, white sugar, and brown sugar with an electric mixer in a large bowl until smooth.</li>
